--- a/master peice/CarWdriver/CarWdriver.css
+++ b/master peice/CarWdriver/CarWdriver.css
@@ -423,6 +423,7 @@ section{
     position: absolute;
     top: 10px;
     right: -19px;
+    cursor: pointer;
     font-size: 1.5rem;
     color: #d30d0d;
 }
