--- a/master peice/Contact Us/Contactus.css
+++ b/master peice/Contact Us/Contactus.css
@@ -377,7 +377,7 @@ li:hover,
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(https://images.pexels.com/photos/325185/pexels-photo-325185.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+    /* background-image: url(https://images.pexels.com/photos/325185/pexels-photo-325185.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940); */
     background-size: cover;
     background-position: center;
     position: relative;
