--- a/master peice/Renter/renter.css
+++ b/master peice/Renter/renter.css
@@ -361,6 +361,7 @@ section {
 
 .name {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
 }
@@ -475,7 +476,8 @@ section {
     right: -400px; 
     width: 300px;
     background-color: #fff;
-    padding: 10px;
+    padding: 1.3%;
+    border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     transition: right 0.3s ease-in-out;
     
@@ -518,18 +520,10 @@ section {
     background-color: #1a1a1a; /* Adjust hover background color */
 }
 
-/* Additional styling for consistency */
-.add-car-form {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
 /* Optional: Style the form labels and inputs */
 .add-car-form label {
     display: block;
-    margin-bottom: 8px;
+    margin-bottom: 2%;
     font-weight: bold;
     color: #333;
 }
