--- a/master peice/CarWdriver/CarWdriver.css
+++ b/master peice/CarWdriver/CarWdriver.css
@@ -126,7 +126,7 @@ li:hover,
 
 @media(max-width:740px) {
     .header{
-        width: 100%;
+        width: auto;
     }
     #nav1 {
         position: absolute;
@@ -603,6 +603,9 @@ section{
 @media(max-width:560px) {
     .arr-row .arr-col{
         width: 80%;
+    }
+    .show-col  .searchBox .searchbar{
+        font-size: 1rem;
     }
     .arrivals .arr-row.row{
         grid-template-columns: 1fr;
