--- a/master peice/Renter/renter.css
+++ b/master peice/Renter/renter.css
@@ -129,7 +129,7 @@ li:hover,
 
 @media(max-width:740px) {
     .header {
-        width: 100%;
+        width: auto;
     }
 
     #nav1 {
@@ -531,7 +531,7 @@ section {
 .add-car-form input,
 .add-car-form select {
     width: 100%;
-    padding: 8px;
+    padding: 2%;
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 5px;
