--- a/master peice/login/login.css
+++ b/master peice/login/login.css
@@ -125,7 +125,7 @@ li:hover,
 
 @media(max-width:740px) {
     .header{
-        width: 100%;
+        width: auto;
     }
     #nav1 {
         position: absolute;
