--- a/master peice/Renter/renter.css
+++ b/master peice/Renter/renter.css
@@ -480,7 +480,8 @@ section {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     transition: right 0.3s ease-in-out;
-    
+    height: 100vh;
+    overflow-y: auto;
 }
 
 #addCarForm{
