--- a/master peice/index.css
+++ b/master peice/index.css
@@ -439,7 +439,7 @@ section{
 @media(max-width:1353px){
     .search .find{
         max-width:85%;
-        left: 20px;
+        left: 4%;
 
     }
     .search{
