--- a/master peice/Renter/renter.css
+++ b/master peice/Renter/renter.css
@@ -473,7 +473,7 @@ section {
   .add-car-form {
     position: fixed;
     top: 0;
-    right: -400px; 
+    right: -400px;
     width: 300px;
     background-color: #fff;
     padding: 1.3%;
@@ -532,7 +532,7 @@ section {
 .add-car-form input,
 .add-car-form select {
     width: 100%;
-    padding: 2%;
+    padding: 1.3%;
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -617,4 +617,7 @@ input.Availability:checked::before {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+#err{
+    color: #d30d0d;
 }
