--- a/master peice/admin2/css/style.css
+++ b/master peice/admin2/css/style.css
@@ -109,7 +109,9 @@ header .logo {
 
 header .logo-text {
   margin: 9px;
-  font-family: 'Candal', serif;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-transform: uppercase;
+  
 }
 
 header .logo-text span {
