--- a/master peice/shop/shop.css
+++ b/master peice/shop/shop.css
@@ -529,6 +529,13 @@ section{
     font-size: 0.8rem;
     color:#d30d0d;
 }
+.arr-col .rating .review{
+    white-space: nowrap;
+  overflow: hidden;
+  max-width: 110px; /* adjust as needed */
+
+}
+
 .arr-col .rating .review span{
     font-weight: 600;
 }
