--- a/master peice/About us/Aboutus.css
+++ b/master peice/About us/Aboutus.css
@@ -348,7 +348,7 @@ li:hover,
 
 @media(max-width:600px) {
     .footer .footer-row {
-        text-align: center;
+        text-align: justify;
         grid-template-columns: 1fr;
     }
 }
