--- a/master peice/Renter/renter.css
+++ b/master peice/Renter/renter.css
@@ -450,7 +450,7 @@ section {
   }
   tr td img{
     width: 160px;
-    height: auto;
+    max-height: 95px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     object-fit: cover;
